<resources>
    <string name="app_name">Bluetooth Graph</string>
    <string name="Devices">Devices</string>
    <string name="Bluetooth_label">Bluetooth</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_settings">Settings</string>
    <string name="auto_scroll_x_off">Auto off</string>
    <string name="auto_scroll_x_on">Auto on</string>
    <string name="control">Control</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="pause">Stop</string>
    <string name="unpause">Start</string>
    <string name="reset_graph">Reset</string>
    <string name="debug">Debug</string>
    <string name="max_x_value">max_x_value</string>
    <string name="max_count_values">max_count_values</string>
    <string name="Settings_label">Settings</string>
    <string name="type_of_data">type_of_data</string>
</resources>
